--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,8 @@
 
     <div class="collapse navbar-collapse" id="navbarNav">
       <div class="navbar-nav ms-auto">
-        <a class="nav-link" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Personajes</a>
+        <a class="nav-link" routerLink="/" routerLinkActive="active"
+          [routerLinkActiveOptions]="{exact: true}">Personajes</a>
 
         <!-- Usamos el async pipe con currentUser$ para mayor reactividad -->
         <ng-container *ngIf="currentUser$ | async as user; else notLoggedIn">
